@@ -308,6 +308,9 @@
                                         <property name="sort_column_id">2</property>
                                         <child>
                                           <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf1"/>
+                                          <attributes>
+                                            <attribute name="pixbuf">4</attribute>
+                                          </attributes>
                                         </child>
                                         <child>
                                           <object class="GtkCellRendererText" id="cellrenderertext1"/>
@@ -487,6 +490,9 @@
                                         <property name="title" translatable="yes">Source</property>
                                         <child>
                                           <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf_1"/>
+                                          <attributes>
+                                            <attribute name="pixbuf">1</attribute>
+                                          </attributes>
                                         </child>
                                         <child>
                                           <object class="GtkCellRendererText" id="cellrenderertext_2"/>
