@@ -1,3 +1,7 @@
+2012-09-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* utils/iconimage.py: Added icons to account liststore.
+
 2012-09-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* updatewindow.py, menu.py: Show screen name on retweet dialog.
